css/look.css
body {
    margin: 0;
    padding: 0;
    font-family: 'Oswald', sans-serif, 'Tahoma';
    letter-spacing: 0px;
    background: #fff;
    max-width: 100%;
    max-height: 100%;
}

a {
    text-decoration: underline;
    color: #000000;
}

a:active {
    text-decoration: underline;
    color: #bc3315;
}

#intro {
    width: 84%;
    text-align: center;
    margin: 10px 0px 0px 0px;
    padding-right: 0px;
}

#intro a {
    text-decoration: none;
    color: black;
}

#intro img, #intro h2, #intro p {
    display: inline-block;
}

#intro h2, #intro p {
    position: relative;
    bottom: 10px;
    right: 28.59px;
    text-shadow: 22px 15px 5px rgba(0, 0, 0, 0.25);
}

#intro p {
    font-size: 12px;
}

#intro img {
    width: 45px;
}

#target-blocks {
    height: 408px;
}

ul#target {
    width: 400px;  /* Must be here! */
    list-style: none;
}

ul#target li {
    display: inline-block;
    padding: 0px 2.5px 0px 2.5px;
    z-index: 0;
}

ul#target li div {
    cursor: pointer;
    border-radius: 2px;
}

#start-button  {
	-moz-box-shadow:inset 0px 1px 0px 0px #cf866c;
	-webkit-box-shadow:inset 0px 1px 0px 0px #cf866c;
	box-shadow:inset 0px 1px 0px 0px #cf866c;
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #d0451b), color-stop(1, #bc3315));
	background:-moz-linear-gradient(top, #d0451b 5%, #bc3315 100%);
	background:-webkit-linear-gradient(top, #d0451b 5%, #bc3315 100%);
	background:-o-linear-gradient(top, #d0451b 5%, #bc3315 100%);
	background:-ms-linear-gradient(top, #d0451b 5%, #bc3315 100%);
	background:linear-gradient(to bottom, #d0451b 5%, #bc3315 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#d0451b', endColorstr='#bc3315',GradientType=0);
	background-color:#d0451b;
	-moz-border-radius:3px;
	-webkit-border-radius:3px;
	border-radius:3px;
	border:1px solid #942911;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
    font-family: 'Oswald', sans-serif, 'Tahoma';
    letter-spacing: 1px;
	font-size:15px;
    padding:8px 26px;
    margin:10px auto;
	text-decoration:none;
    display: block;
}

#start-button:hover {
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #bc3315), color-stop(1, #d0451b));
	background:-moz-linear-gradient(top, #bc3315 5%, #d0451b 100%);
	background:-webkit-linear-gradient(top, #bc3315 5%, #d0451b 100%);
	background:-o-linear-gradient(top, #bc3315 5%, #d0451b 100%);
	background:-ms-linear-gradient(top, #bc3315 5%, #d0451b 100%);
	background:linear-gradient(to bottom, #bc3315 5%, #d0451b 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#bc3315', endColorstr='#d0451b',GradientType=0);
	background-color:#bc3315;
}

#start-button:focus {
    outline: none;
}

#start-button:active {
	position:relative;
	top:1px;
}

#clear-history {
    width: 60px;
    font-size: 12px;
    margin: -7px auto;
    text-align: center;
    display: none;
}

#no-history {
    display: none;
    text-align: center;
    padding: 0;
    margin-top: 45px;
    opacity: .18;
}

#history {
    display: none;
    width: 400px;
    text-align: center;
}

#history #quotes {    
    font-size: 13px;
    padding: 0px 25px 0px 25px;
}

#history #score-history {
    width: 80%;
    font-size: 12px;
    margin: 30px auto;
}

#history #score-history tr, #history #score-history td {
    border: 1px solid #ddd;
    padding: 1px;
}

/* LEVELS */
#levels-wrapper {
    margin: 1% 0px 0px 50px;
    width: 70%;
    background: #fff;
    opacity: 0;
    transform: translate(0px, 50px);
    transition: opacity .5s, transform .5s;
}

#levels-bar {
    width: 0%;
    height: 4px;
    background: #e74c3c;
    border-radius: 5px;
    -webkit-transition: width 0.3s;
    -moz-transition: width 0.3s;
    -ms-transition: width 0.3s;
    transition: width 0.3s;
}

#diff-title {
    font-size: 14px;
    text-align: left;
}

#diff {
    font-size: 35px;
}

ul#ranks-wrapper {
    height: 4px;
    padding: 0;
    margin: 0;
    text-align: right;
}

ul#ranks-wrapper li {
    display: inline-block;
    width: 20%;
}

ul#ranks-wrapper li p {
    margin: 0;
    padding-top: 4px;
}

.rank-role {
    -webkit-transition: color .15s;
    -moz-transition: color .15s;
    -ms-transition: color .15s;
    transition: color .15s;
    font-weight: bold;
}


/* Score/Fault and Time */
.score-fault-output {
    font-size: 35px;
}

#time {
    font-size: 30px;
    font-weight: bold;
    color: #26a65b;
    width: 45px;
    text-align: center;
    border-radius: 50%;
    margin-left: 12px;
}

#score {
    transition: color .15s;
}

#score, #scorePlus {
    display: inline-block;
}

#fault {
    transition: color .15s;
}

#fault, #faultPlus {
    display: inline-block;
}

#scorePlus, #faultPlus {
    opacity: 0;
    -webkit-transition: opacity .2s, transform .15s;
    -moz-transition: opacity .2s, transform .15s;
    -ms-transition: opacity .2s, transform .15s;
    transition: opacity .2s, transform .15s;
}

#scorePlus { color: #26a65b; }

#faultPlus { color: #e74c3c; }

/* Question */
#question {
    line-height: 15px;
    vertical-align: top;
    margin-top: 52px;
    opacity: 0;
    transform: translateX(-50px);
    transition: opacity .5s, transform .5s;
}

#q-line-height {
    line-height: 2px;
}

#question h1:first-of-type {
    font-size: 90px;
}

#q-line-height #q-unique {
    font-size: 20px;
    letter-spacing: 10px;
    margin-left: 35px;;
}

#question h1:last-of-type {
    font-size: 48px;
}

/* Details */
#details {
    vertical-align: top;
    margin: 30px 0px 0px 20px;
    /* visibility: hidden; */
}

#stats {
    margin-top: 20px;
}

#stats h4 {
    /* margin: 20px 0px 0px 0px; */
    line-height: 30px;
}

/* Layout styling */
#big-boss {
    height: 900px;
    margin: 0px auto;
    width: 1000px;
}

#question, #target-blocks, #details {
    display: inline-block;
}

#footer {
    font-size: 12px;
    position: absolute;
    bottom: 0;
    width: 100%;
    margin-bottom: 10px;
    text-align: center;
    opacity: 0.8;
    line-height: 0px;
}

#footer p, #footer a {
    display: inline-block;
    /* vertical-align: middle; */
}

#github-link {
    opacity: 0.8;
    /* width: 10px; */
    position: relative;
    right: 29px;
    top: 15px;
    transition: opacity .1s;
}

#github-link:hover {
    opacity: 0.5;
}

tr:nth-of-type(2){
    transition: background-color .5s, color .5s;
}

#ok, #ie {
    max-width: 100%;
    margin: 100px auto;
    text-align: center;
    display: none;
}

@media(max-width: 800px){
    #big-boss { display: none; }
    #footer { display: none; }

    #ok {
        display: block;
    }
}

